feat: implement modal editor for MTG commander damage
Replaces direct inline grid interactions with a modal dialog to manage commander damage, reducing accidental inputs and improving accessibility.

- Replace interactive `GridLayout` cells in `life_player_cell.xml` with a non-interactive summary strip.
- Add `showCommanderDamageDialog` using `MaterialAlertDialogBuilder` to provide explicit increment and decrement controls.
- Implement real-time updates for the active dialog by tracking its `TextView` references in the UI state observer.
- Update the commander damage RFC to reflect the move from inline editing to a modal interaction pattern.
- Add string resources for dialog titles and player labels.
- Transition the commander damage container from `GridLayout` to `LinearLayout` for better row-based summary rendering.